--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -186,7 +186,7 @@ layout: default
                             
                         </ul>
                         {% if site.email %}
-                            <p>✉️ {{site.email}}</p>
+<!--                             <p>✉️ {{site.email}}</p> -->
                         {% endif %}
                     </div>
                 </section>
@@ -194,11 +194,11 @@ layout: default
                 {% if site.friends %}
                 <hr>
                 <h5>MORE SITES</h5>
-                <ul class="list-inline">
+<!--                 <ul class="list-inline">
                     {% for friend in site.friends %}
                         <li><a href="{{friend.href}}">{{friend.title}}</a></li>
                     {% endfor %}
-                </ul>
+                </ul> -->
                 {% endif %}
     		</div>
         {% endif %}
